# taste_profiler

./: README.md  pyproject.toml
data/: food_items_evaluation.csv  food_items_labeled.csv  food_items_unlabeled.csv  knowledge_base_average_processed.csv
data/knowledge_base/: knowledge_base_average.csv  knowledge_base_dominant.csv  knowledge_base_expander.ipynb  knowledge_base_threshold.csv
src/notebooks/: knowledge-base-expander.ipynb  workflow.ipynb
src/scripts/: aggregation_strategies.py  flavordb_scraper.py
